# PsychPaperEvalApp

./: .gitignore  Makefile  PaperEval.icns  README.md  run_app.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/tests/: conftest.py  test_analysis_v2.py  test_desktop_api.py  test_model_routing.py  test_parser_refs.py  test_report_retention.py  test_vision_diagnostics.py
desktop_legacy/: README.md  api_client.py  app.py  models.py  workflow.py
desktop_legacy/views/: event_log.py  queue_panel.py  report_panel.py  source_step.py  status_bar.py
desktop_packaging/: requirements-desktop.txt  setup.py
desktop_shell/: README.md  package-lock.json  package.json
desktop_shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop_shell/src-tauri/capabilities/: default.json
desktop_shell/src-tauri/src/: main.rs
desktop_ui/: index.html  package-lock.json  package.json
desktop_ui/src/: App.jsx  api.js  styles.css
models/: README.md
scripts/: audit_test_reports.py  benchmark_compare_models.py  build_macos_app.py  compare_pdf_against_reference.py  desktop_smoke.py  download_models.py  download_pubmed_pdfs.sh  paper_eval_gui.py  run_app.py  run_compare_local.sh  run_grobid.sh  setup_pdffigures2.sh  smoke_test_llm.py  validate_pipeline.py
test/: metadata.tsv
test/bench_runs_sharma_independent/: sharma-et-al-2017-common-dimensional-reward-deficits-across-mood-and-psychotic-disorders-a-connectome-wide-association_app_extraction_20260225_211121.md  (+3 more)
test/text/: sharma_2017_chatgpt_extraction.md  (+5 more)
(+53 files in other folders)
